fixed blurryness and added some stuff

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,31 +1,37 @@
-#bgvid {
-    position: fixed;
-    left: 0;
-    top: 0;
-    object-fit: cover;
-    height: 100%;  
-    width: 100%;
-    z-index: -1;
-  }
+* {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 10px;
+}
 html {
   scroll-behavior: smooth;
 }
+
 body {
   margin: 0;
   height: 100%;
   width: 100%;
   background-attachment: fixed;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; 
   background-color: #0C1218;
   background-size: cover;
   overflow-x: hidden;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
 body::-webkit-scrollbar {
   display: none;
 }
 
+#bgvid {
+  position: fixed;
+  left: 0;
+  top: 0;
+  object-fit: cover;
+  height: 100%;  
+  width: 100%;
+  z-index: -1;
+}
 
 .backdev {
   position: absolute;
@@ -34,7 +40,7 @@ body::-webkit-scrollbar {
   text-decoration: none;
   color: rgba(127, 255, 212, 0);
   transition: 0.5s;
-  font-size: 20px;
+  font-size: 2em;
   font-family: Sofia;
 }
 .backdev:hover {
@@ -66,7 +72,7 @@ nav li a {
   color:aliceblue ;
   font-weight:bolder;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
+  font-size: 2em;
   padding: 20px 20px 20px 20px;
   transition: 0.6s;
   text-decoration: none;
@@ -99,9 +105,36 @@ main {
   text-align: center;
   margin: 10em auto;
 }
+main h1 {
+  font-size: 2em;
+}
+main p {
+  font-size: 1.4em;
+}
 
 /* back to top button */
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.125);
+  backdrop-filter: blur(5px);
+  border-bottom: solid 0.5px white;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 2px;
+}
 
+#myBtn:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  transition: 3s;
+}
 /* end main content */
 
 /* Footer */
